--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,7 +12,7 @@
 :root { 
   --background-color: #ffffff; /* Background color for the entire website, including individual sections */
   --default-color: #212529; /* Default color used for the majority of the text content across the entire website */
-  --heading-color: #000000; /* Color for headings, subheadings and title throughout the website */
+  --heading-color: #516150; /* Color for headings, subheadings and title throughout the website */
   --accent-color: #000000; /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
   --surface-color: #ffffff; /* The surface color is used as a background of boxed elements within sections, such as cards, icon boxes, or other elements that require a visual separation from the global background. */
   --contrast-color: #ffffff; /* Contrast color for text, ensuring readability against backgrounds of accent, heading, or default colors. */
@@ -121,22 +121,22 @@ div.sidebar {
                 right: 0;
                 background-color: #ffffff;
                 overflow-x: hidden;
-                transition: 0.5s;
-                padding-top: 60px;
+                transition: 0.3s;
+                padding-top: 0px;
             }
 
             div.sidebar a {
                 display: block;
-                padding: 8px 8px 8px 32px;
+                padding: 8px 8px 4px 32px;
                 text-decoration: none;
-                font-size: 20px;
+                font-size: 18px;
                 color: #000000;
-                transition: 0.3s;
+                transition: 0.5s;
             }
 
             #main .openbtn {
                 font-size: 30px;
-                position: absolute;
+                position: fixed;
                 top: 10px;
                 right: 10px;
                 cursor: pointer;
@@ -147,23 +147,24 @@ div.sidebar {
             }
 
             div.sidebar .closebtn {
-                position: absolute;
-                top: 10px;
-                right: 10px;
-                font-size: 36px;
+                position: sticky;
+                top: 0px;
+                right: 0px;
+                font-size: 40px;
             }
 
             div.sidebar a:hover {
-                color: #807e7e;
+              background-color: #e6b1e7;  
+              color: #3e3e3e;
             }
 
             #main .openbtn:hover {
-                color: #5b5b5b;
+                color: #e6b1e7;
             }
 
             #main {
                 transition: margin-left .5s;
-                padding: 16px;
+                padding: 0px;
             }
 
             /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
@@ -172,132 +173,8 @@ div.sidebar {
                 div.sidebar a {font-size: 18px;}
             }
 
-/*--------------------------------------------------------------
-# Navigation Menu
---------------------------------------------------------------*/
-/* Navmenu */
-.mobile-nav-toggle {
-  color: var(--nav-color);
-  position: fixed;
-  top: 20px;
-  right: 20px;
-  font-size: 32px;
-  line-height: 0;
-  cursor: pointer;
-  display: block !important;
-  z-index: 998;
-  transition: 0.3s;
-}
 
-.mobile-nav-toggle:hover {
-  color: var(--nav-hover-color);
-}
 
-.navmenu {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  right: -300px;
-  z-index: 997;
-  transition: 0.3s;
-  width: 300px;
-  overflow: hidden;
-}
-
-.navmenu ul {
-  display: block;
-  list-style: none;
-  padding: 10px 0;
-  margin: 0;
-  overflow-y: auto;
-  transition: 0.3s;
-  z-index: 998;
-}
-
-.navmenu a,
-.navmenu a:focus {
-  color: var(--nav-dropdown-color);
-  padding: 10px 20px;
-  font-family: var(--nav-font);
-  font-size: 17px;
-  font-weight: 500;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  white-space: nowrap;
-  transition: 0.3s;
-}
-
-.navmenu a i,
-.navmenu a:focus i {
-  font-size: 12px;
-  line-height: 0;
-  margin-left: 5px;
-  width: 30px;
-  height: 30px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50%;
-  transition: 0.3s;
-  background-color: color-mix(in srgb, var(--accent-color), transparent 90%);
-}
-
-.navmenu a i:hover,
-.navmenu a:focus i:hover {
-  background-color: var(--accent-color);
-  color: var(--contrast-color);
-}
-
-.navmenu a:hover,
-.navmenu .active,
-.navmenu .active:focus {
-  color: var(--nav-dropdown-hover-color);
-}
-
-.navmenu .active i,
-.navmenu .active:focus i {
-  background-color: var(--accent-color);
-  color: var(--contrast-color);
-  transform: rotate(180deg);
-}
-
-.navmenu .dropdown ul {
-  position: static;
-  display: none;
-  z-index: 99;
-  padding: 10px 0;
-  margin: 10px 20px;
-  box-shadow: none;
-  transition: all 0.5s ease-in-out;
-}
-
-.navmenu .dropdown>.dropdown-active {
-  display: block;
-  background-color: var(--nav-dropdown-background-color);
-  border: 1px solid color-mix(in srgb, var(--nav-dropdown-color), transparent 90%);
-}
-
-.mobile-nav-active {
-  overflow: hidden;
-}
-
-.mobile-nav-active .mobile-nav-toggle {
-  right: 310px;
-  background-color: var(--surface-color);
-  border-radius: 50%;
-  border: 1px solid color-mix(in srgb, var(--default-color), transparent 80%);
-}
-
-.mobile-nav-active .navmenu {
-  position: fixed;
-  overflow: hidden;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  background-color: var(--nav-mobile-background-color);
-  transition: 0.3s;
-}
 
 /*--------------------------------------------------------------
 # Global Footer
@@ -320,7 +197,6 @@ div.sidebar {
   font-size: 13px;
   text-align: center;
 }
-
 
 
 /*--------------------------------------------------------------
@@ -370,17 +246,17 @@ section,
 .section {
   color: var(--default-color);
   background-color: var(--background-color);
-  padding: 60px 0;
-  scroll-margin-top: 90px;
+  padding: 0px 0;
+  scroll-margin-top: 30px;
   overflow: clip;
-  margin: 20px;
+  margin: 20px; 0px; 0px; 0px;
 }
 
 @media (max-width: 1199px) {
 
   section,
   .section {
-    scroll-margin-top: 66px;
+    scroll-margin-top: 20px;
   }
 }
 
@@ -411,6 +287,7 @@ section,
 .about .content ul {
   list-style: none;
   padding: 0;
+  margin: 20px;
 }
 
 .about .content ul li {
@@ -488,43 +365,3 @@ section,
   font-size: 14px;
 }
 
-.contact .php-email-form {
-  height: 100%;
-}
-
-.contact .php-email-form input[type=text],
-.contact .php-email-form input[type=email],
-.contact .php-email-form textarea {
-  font-size: 14px;
-  padding: 10px 15px;
-  box-shadow: none;
-  border-radius: 0;
-  color: var(--default-color);
-  background-color: color-mix(in srgb, var(--background-color), transparent 50%);
-  border-color: color-mix(in srgb, var(--default-color), transparent 80%);
-}
-
-.contact .php-email-form input[type=text]:focus,
-.contact .php-email-form input[type=email]:focus,
-.contact .php-email-form textarea:focus {
-  border-color: var(--accent-color);
-}
-
-.contact .php-email-form input[type=text]::placeholder,
-.contact .php-email-form input[type=email]::placeholder,
-.contact .php-email-form textarea::placeholder {
-  color: color-mix(in srgb, var(--default-color), transparent 70%);
-}
-
-.contact .php-email-form button[type=submit] {
-  color: var(--contrast-color);
-  background: var(--accent-color);
-  border: 0;
-  padding: 10px 30px;
-  transition: 0.4s;
-  border-radius: 50px;
-}
-
-.contact .php-email-form button[type=submit]:hover {
-  background: color-mix(in srgb, var(--accent-color), transparent 20%);
-}
