--- a/assets/css/labs.css
+++ b/assets/css/labs.css
@@ -31,11 +31,12 @@ html {
  */
 
 .wrapper {
-  margin-top: 10px;
-  margin-left: 0;
+  display: block;
+  margin-top: 15px;
+  margin-left:  auto;
   margin-right: auto;
   padding-right: 1.5em;
-  padding-left: 1.2em;
+  padding-left: 1.5em;
   max-width: 1080px;
 }
 
